--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ APP_PORT=8080
 APP_URL=http://localhost:8080
 
 # Database
-DB_DIALECT=postgres
-DB_USER=postgres
-DB_PASSWD=99876653910g
-DB_NAME=github_database
-DB_HOST=127.0.0.1
-DB_PORT=5432
+DB_DIALECT=
+DB_USER=
+DB_PASSWD=
+DB_NAME=
+DB_HOST=
+DB_PORT=
