--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ APP_PORT=8080
 APP_URL=http://localhost:8080
 
 # Database
-DB_DIALECT=
+DB_DIALECT=postgres
 DB_USER=
 DB_PASSWD=
 DB_NAME=
@@ -11,8 +11,6 @@ DB_HOST=
 DB_PORT=
 
 # Tokens
-TOKEN_GEOVANY=
-TOKEN_LEONARDO=
-TOKEN_THIAGO=
+TOKEN=
 
 MONGO_URL=
